# ballerina

./: .gitignore  ballerina.sln  global.json  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
backend/: Directory.Build.props  backend.sln
backend/apps/automatic-tests/: automatic-tests.fsproj
backend/apps/ballerina-cat.Tests/: ballerina-cat.Tests.fsproj  packages.lock.json
backend/apps/ballerina-core.Tests/: ballerina-core.Tests.fsproj  packages.lock.json
backend/apps/ballerina-data.Tests/: ballerina-data.Tests.fsproj  packages.lock.json
backend/apps/ballerina-lang.Tests/: ExtensionsBootstrap.fs  ballerina-lang.Tests.fsproj  packages.lock.json
backend/apps/ballerina-runtime/: ballerina-runtime.fsproj
backend/apps/ballerina-seeds.Tests/: Arity.fs  Schema.fs  ballerina-seeds.Tests.fsproj  packages.lock.json
backend/apps/ballerina-stdlib.Tests/: ballerina-stdlib.Tests.fsproj  packages.lock.json
backend/apps/test/: packages.lock.json  test.fsproj
backend/libraries/absample/: absample.fsproj
backend/libraries/ballerina-cat/: ballerina-cat.fsproj  packages.lock.json
backend/libraries/ballerina-core-go/: array.go  chunk.go  delta_array.go  delta_chunk.go  delta_many.go  delta_manyitem.go  delta_map.go  delta_one.go  delta_option.go  delta_primitive.go  delta_readOnly.go  delta_set.go  delta_sum.go  delta_table.go  delta_tuple.go  delta_unit.go  error.go  filter_contains.go  filter_equal_to.go  filter_greater_than.go  filter_greater_than_or_equal.go  filter_is_not_null.go  (+32 more)
backend/libraries/ballerina-core-python/: .gitignore  README.md  lint.sh  pyproject.toml
backend/libraries/ballerina-core-python/ballerina_core/: fun.py  option.py  primitives.py  sum.py  unit.py
backend/libraries/ballerina-core-python/ballerina_core/parsing/: dictionary.py  list.py  option.py  parsing_types.py  primitives.py  products.py  sum.py  tuple.py
backend/libraries/ballerina-core-python/tests/: option_test.py  parsing_test.py  primitives_test.py  sum_test.py
backend/libraries/ballerina-core-python/tests/parsing/: list_test.py  option_test.py  primitives_test.py  sum_test.py  tuple_test.py
(+622 files in other folders)
